--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:ui": "rm -rf build && cd ../full-stack-open/03.\\ Programming\\ A\\ Server\\ With\\ NodeJS\\ and\\ Express\\/notes-frontend/ && npm run build && cp -r build ../../../notes-backend",
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
-    "logs:prod": "fly logs"
+    "logs:prod": "fly logs",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "mongoose": "^6.7.5"
   },
   "devDependencies": {
+    "eslint": "^8.28.0",
     "nodemon": "^2.0.20"
   }
 }
