--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "build:ui": "rm -rf build && cd ../full-stack-open/03.\\ Programming\\ A\\ Server\\ With\\ NodeJS\\ and\\ Express\\/notes-frontend/ && npm run build && cp -r build ../../../notes-backend",
+    "build:ui": "rm -rf build && cd ../full-stack-open/04.\\ Testing\\ Express\\ Servers\\ And\\ User\\ Administration\\/notes-frontend/ && npm run build && cp -r build ../../../notes-backend",
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "fly logs",
